--- a/slides/w4_dplyr.Rmd
+++ b/slides/w4_dplyr.Rmd
@@ -81,10 +81,12 @@ class: left, middle
 - Midway Student Experience Survey
   + now open
   + Canvas: UO Course Surveys (left sidebar)
-- Final Project Outline
+- .red[ Final Project Outline]
   + Due 10/27
   
 > The outline should include a description of the data to be used, a discussion of what preparatory work will need to be done, and how the requirements of the final project will be met. The outline is intended to be low-stakes and is primarily designed to be a means for you to obtain feedback on the feasibility of the project and areas to consider.
+
+- Assignment completion
 
 ---
 class: inverse, left, middle
