--- a/docs/nopublish/hw/hw6.Rmd
+++ b/docs/nopublish/hw/hw6.Rmd
@@ -46,7 +46,7 @@ theme_set(theme_minimal())
 <br>
 <br>
 
-#### 3. Import the *ecls-k_samp.sav* dataset (stored on Canvas in *Files -> data*), and produce the plot below. Do not show the code you used (colors, themes, etc. don't matter here).
+#### 3. Import the *ecls-k_samp.sav* dataset (found [here](https://uo-datasci-specialization.github.io/c1-intro-fall-2021/data_list.html)), and produce the plot below. Do not show the code you used (colors, themes, etc. don't matter here).
 
 ```{r load-data, echo=FALSE}
 eclsk <- import(here("data" , "ecls-k_samp.sav")) %>%
@@ -87,17 +87,8 @@ t1sd <- sd(eclsk$t1mscale, na.rm = TRUE)
 <br>
 <br>
 
-#### 6. The following displays a regression model. Reproduce the equation.
-
-$$
-math_{t2_i} = \alpha + \beta_1(math_{t1_i}) + \beta_2(ethnic_{cat_i}) + \beta_3(schooltype_{cat_i}) + \beta_4(ethnic_{t1_i} \times schooltype_{cat_i}) + \epsilon
-$$
-<br>
-<br>
-<br>
-
-#### 7. Pretend you are trying to teach somebody how to load data. Describe the process below that we've discussed in class, including why it helps reproducibility, and echo chunks of code as necessary without actually evaluating any of it.
-- Include some text that is **bold** and some that is *italics.*
+#### 6. Pretend you are trying to teach somebody how to load data. Describe the process below that we've discussed in class, including why it helps reproducibility, and echo chunks of code as necessary without actually evaluating any of it.
+- Include some text that is **bold** and some that is *italics*.
 
 
 
