--- a/docs/slides/w7_git.Rmd
+++ b/docs/slides/w7_git.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Week 6: git & GitHub"
+title: "Week 7: git & GitHub"
 subtitle: "Version Control"
 author: "Joe Nese<br><span style = 'font-size: 50%;'>University of Oregon<br>Fall 2021</span>"
 output:
@@ -35,7 +35,29 @@ library(here)
 library(kableExtra)
 library(fontawesome)
 library(countdown)
+library(gt)
 
+table_style <- function(data) {
+  data %>%
+    opt_table_lines(extent = "none") %>%
+    opt_table_outline(style = "solid", width = px(3), color = "black") %>% 
+    tab_options(
+      heading.border.bottom.color = "black",
+      heading.border.bottom.style = "solid",
+      table.border.top.color = "black",
+      table_body.hlines.color = "black",
+      table_body.border.top.color = "black",
+      table_body.border.top.style = "solid",
+      table_body.border.bottom.color = "black",
+      table_body.border.bottom.style = "solid",
+      column_labels.border.bottom.color = "black",
+      column_labels.border.bottom.style = "solid",
+      column_labels.border.top.color = "black",
+      column_labels.background.color = "#56B4E9",
+      table.width = pct(100),
+      container.width = pct(100)
+    )
+}
 ```
 
 ```{r xaringan-themer, include=FALSE, warning=FALSE}
@@ -44,9 +66,9 @@ library(xaringanthemer)
 style_duo_accent(
   primary_color = "#1F4E79",
   secondary_color = "#0072B2",
-  header_font_google = google_font("Atkinson Hyperlegible", "600"),
-  text_font_google   = google_font("Atkinson Hyperlegible", "300", "300i"),
-  code_font_google   = google_font("IBM Plex Mono"),
+  header_font_google = xaringanthemer::google_font("Atkinson Hyperlegible", "600"),
+  text_font_google   = xaringanthemer::google_font("Atkinson Hyperlegible", "300", "300i"),
+  code_font_google   = xaringanthemer::google_font("IBM Plex Mono"),
   colors = c(
     darkblue = "#0072B2",
     lightblue = "#56B4E9",
@@ -55,7 +77,8 @@ style_duo_accent(
     yellow = "#f0e442",
     green = "#009E73",
     pink = "#CC79A7",
-    white = "#FFFFFF"
+    white = "#FFFFFF",
+    red = "#ff0000"
   )
 )
 ```
@@ -64,7 +87,6 @@ style_duo_accent(
 xaringanExtra::use_freezeframe()
 ```
 
----
 class: inverse, left, middle
 
 # git & GitHub
@@ -74,12 +96,16 @@ class: inverse, left, middle
 
 # Agenda
 
-*
+* Introduce reasons for version control
+* Introduce
+  + git
+  + GitHub
+  + GitKraken
 
 **Learning Objectives**
 
 * ~~Understand~~ Introduce the basics of git and git terminology
-* Be able to create repos, commit changes, push, clone, and pull
+* Be able to create *.green[repos]*, *.green[commit]* changes, *.green[push]*, *.green[clone]*, and *.green[pull]*
 * Be prepared to collaborate on a project
 
 ---
@@ -94,7 +120,7 @@ class: inverse, left, middle
 knitr::include_graphics("https://git-scm.com/images/logos/logomark-orange@2x.png")
 ```
 * a version control system
-* lives on your computer and keeps track of files and all changes made to them that you register with *commits*
+* lives on your computer and keeps track of files and all changes made to them that you register with *.green[commits]*
 ]
 
 .pull-right[
@@ -102,7 +128,7 @@ knitr::include_graphics("https://git-scm.com/images/logos/logomark-orange@2x.png
 ```{r, echo=FALSE, out.width='10%'}
 knitr::include_graphics("https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/600px-Octicons-mark-github.svg.png")
 ```
-* an online host for *repositories* of code and data
+* an online host for *.green[repositories]* of code and data
 * lives on the internet
 ]
 
@@ -152,7 +178,7 @@ Credit [Nathan Brouwer](https://mobile.twitter.com/lobrowR)
   + I'm okay with either or both, as long as you (sort of) know what you're doing
   + We’re going to use [GitKraken](https://www.gitkraken.com/) in this course 
 4. Develop a solid understanding of the underlying structure, so you know what you want to do even if you don't know how
-  + *commit*, *push*, *pull*, *fork*
+  + *.green[commit]*, *.green[push]*, *.green[pull]*, *.green[fork]*
 
 ---
 background-image: url(https://res.cloudinary.com/practicaldev/image/fetch/s--t4yzzdh2--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://dev-to-uploads.s3.amazonaws.com/i/pgwreddlj4a1m16bjnzm.jpg)
@@ -166,8 +192,10 @@ Can be a powerful tool for collaboration
 * Communication between team members is important
 * Try to avoid merge conflicts
   - One person working on one thing at a time
-  - Pull first each and every time!
-  - Push often/at logical points
+  - *.green[Pull]* first each and every time!
+  - *.green[Push]* often/at logical points
+
+
 Excellent for reproducibility (a tenet of the data science pipeline)
 * Open data and code
 * Transparent 
@@ -254,25 +282,20 @@ background-color: #009E73
 
 --
 
-#### Version Control System
-* A tool to help us track changes. git is one such system (but there are others)
+* <b>version control system</b>
+  + A tool to help us track changes. git is one such system (but there are others)
 
 --
-
-#### repository (repo)
-* The files, full commit history, and associated metadata for a project
+* <b>repository (repo)</b>
+  + The files, full commit history, and associated metadata for a project
 
 --
-
-#### remote (repo)
+* <b>remote (repo)</b>
   + The cloud-based server hosting the repo (that's GitHub)
 
-#### local (repo)
-  + The (entire) repo you - and each collaborator - has on their local machine
+---
 
---
-
-```{r}
+```{r, echo=FALSE, out.height='75%', out.width='75%', fig.align='center'}
 knitr::include_graphics("images/git_1.png")
 ```
 
@@ -285,11 +308,14 @@ class: inverse, left, middle
 ---
 # Connect GitHub & GitKraken
 
-Go to GitKraken
+### Go to GitKraken
 
 1. "Sign in with GitHub"
+
 2. "Continue with Authorization"
+
 3. You should see *“Success: GitHub and GitKraken are good to go!”* or something like that
+
 4. Check your email for an email from GitHub to verify (?)
 
 ---
@@ -302,7 +328,7 @@ knitr::include_graphics("images/open_gk.png")
 ---
 # Connect GitHub and GitKraken
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, out.height='75%', out.width='75%'}
 knitr::include_graphics("images/auth_gk.png")
 ```
 
@@ -311,7 +337,7 @@ knitr::include_graphics("images/auth_gk.png")
 
 Check your email (associated with your GitHub account)
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, out.height='75%', out.width='75%'}
 knitr::include_graphics("images/auth_gk.png")
 ```
 
@@ -325,14 +351,18 @@ class: inverse, left, middle
 # Proposed Workflow
 
 1. Create your RStudio Project (as usual)
-2. Open a **repo** on GitKraken
-3. Create new **repo** on GitHub
-4. Add **remote** on GitKraken
+
+2. **GitKraken**: Open a *.green[repo]* on GitKraken
+
+3. **GitHub**: Create new *.green[repo]* on GitHub
+
+4. **GitKraken**: Add *.green[remote]* on GitKraken
 
 ---
 # 1. Create your RStudio Project (as usual)
 
 * Let’s make a new RStudio Project
+  + Open a new R Markdown document and name it "*foo*"
 
 * Note the name you gave the project (folder)
 
@@ -344,6 +374,7 @@ class: inverse, left, middle
 # 1. Create your RStudio Project (as usual)
 
 * Let’s make a new RStudio Project
+  + Open a new R Markdown document and name it "*foo*"
 
 * Note the name you gave the project (folder)
 
@@ -354,10 +385,12 @@ class: inverse, left, middle
 ---
 # 2. Open a repo on GitKraken
 
-**GitKraken**
+### GitKraken
 
-* Open a repo
+* Open a *.green[repo]*
+
 * Init
+
 * Local only
 
 ---
@@ -387,7 +420,7 @@ knitr::include_graphics("images/gk_init.png")
 * *"Default branch name"*
   + "main"
 * *".gitignore Template"*
-  + .bg-ellow[If already created one with your project, leave empty]
+  + .bg-yellow[If already created one with your project, leave empty]
   + If none yet created, choose "R"
 * *"License (optional)"*
   + MIT License
@@ -402,14 +435,14 @@ knitr::include_graphics("images/gk_init2.png")
 ---
 # 3. Create new repo on GitHub
 
-**GitHub**
+### GitHub
 
-(1) Create new Repo
-  + Repository name – same as your Project name
-  + Description – keep it brief, informative
-  + Public
-  + Do not initialize
-  + "None" 
+(1) Create new *.green[repo]*
+  + <b>Repository name</b> – same as your Project name
+  + <b>Description</b> – keep it brief, informative
+  + <b>Public</b>
+  + <b>Do not initialize</b>
+  + <b>"None"</b> 
   + do **NOT** add `.gitignore` 
   + do **NOT** add a license
 
@@ -439,11 +472,13 @@ knitr::include_graphics("images/gh_new3.png")
 ---
 # 4. Back to GitKraken to Add Remote
 
-**GitKraken**
+### GitKraken
 
-Add REMOTE
+Add .green[REMOTE]
 * Same Name used thus far
-* Click `r fa(name = "globe")` *"URL"*
+
+* Click `r fontawesome::fa(name = "globe")` *"URL"*
+
 * Paste URL
 
 ---
@@ -458,10 +493,12 @@ knitr::include_graphics("images/gk_remote.png")
 # Paste URL into "Pull URL"
 
 * Same Name used thus far
+
 * Click `r fa(name = "globe")` *"URL"*
+
 * Paste URL
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, out.height='50%', out.width='50%'}
 knitr::include_graphics("images/gk_url.png")
 ```
 
@@ -473,7 +510,7 @@ class: inverse, left, middle
 ---
 # Navigate to the folder
 
-* Where did you save your *local*?
+* Where did you save your *.green[local]*?
 
 --
 
@@ -491,24 +528,31 @@ knitr::include_graphics("images/show_hidden.png")
 # Tracking
 
 * As long as the `.git` folder exists, the entire folder will be tracked
-* **Do not** create repos inside of repos
+
+* **Do not** create .green[repos] inside of .green[repos]
+
 * If you want a folder to show up, there needs to be something in it (e.g., a README.md)
 
 ---
 # Ignoring files
 
-* When we created the .Rproj the repo, we started it with a `.gitignore` file
-* The `.gitignore` file tells the repo not to track certain files
+* When we created the .Rproj the .green[repo], we started it with a `.gitignore` file
+
+* The `.gitignore` file tells the .green[repo] not to track certain files
   + e.g., proprietary data
-* Not that important for now, but if you need to ignore a file in your repo for whatever reason, just put the name of the file(s) at the top of the `.gitignore` file
+  
+* Not that important for now, but if you need to ignore a file in your .green[repo] for whatever reason, just put the name of the file(s) at the top of the `.gitignore` file
+
 * Or, create a folder in your .Rproj (e..g, `nopublish`) and put all your documents to be ignored in that file
-  + then on the first line of your `.gitignore` file, type: nopublish/*
+  + then on the first line of your `.gitignore` file, type:
+<br><br>&nbsp;&nbsp;*nopublish/**
 
 ---
 # Lab 7
 
-Submit a link to the repo you created
+Submit a link to the .green[repo] you created
 * Upload the link to Canvas
+
 * See me if you were unable to complete in class (for technical reasons etc.)
 
 It is ok if you leave today a ~~little~~ lot confused!
@@ -520,27 +564,27 @@ background-color: #009E73
 
 --
 
-#### Stage
-* A file that is being prepared for a commit
+* <b>Stage</b>
+  + A file that is being prepared for a commit
 
 --
-
-#### Commit
-* Changes that have been made to the file(s)
+* <b>Commit</b>
+  + Changes that have been made to the file(s)
 
 --
-
-#### Push
-* After you commit the changes you want, push them from the local to the remote
+* <b>Push</b>
+  + After you commit the changes you want, push them from the local to the remote
 
 --
 
 Half the battle is learning these terms
 
+--
+
 .darkorange[[demo]]
 
 ---
-background-image: url(images/bryan2.png)
+background-image: url(images/bryan_2.png)
 background-size: contain
 
 .footnote[
@@ -550,24 +594,25 @@ Image from Bryan (2017)
 ---
 # Pull
 
-```{r, echo=FALSE, out.width='50%'}
+```{r, echo=FALSE, out.width='100%'}
 knitr::include_graphics("images/pull.png")
 ```
 
 
-* **Pull** before you start any collaborative work!!
-* **Pull** any accepted changes from the remote to your local
+* **.green[Pull]** before you start any collaborative work!!
+
+* **.green[Pull]** any accepted changes from the remote to your local
 
 --
 
-**Pull before you start any collaborative work!!**
+**.green[Pull] before you start any collaborative work!!**
 
 ---
 # Collaborating
 
 Two methods
 
-1. Add users to a repo
+1. Add users to a .green[repo]
   + *Settings > Manage access > Invite a collaborator* (add user with username)
 2. Create an organization
 
@@ -580,15 +625,26 @@ knitr::include_graphics("images/gh_neworg.png")
 ---
 # Collaborating
 
-Final Project
-* Add users to a repo
+Two methods
 
-1. One group member will Open a repo (like we just went over)
+1. .bg-yellow[Add users to a .green[repo]]
+  + *Settings > Manage access > Invite a collaborator* (add user with username)
+2. Create an organization
+
+---
+# Collaborating
+
+<b>Final Project</b>
+
+.bg-yellow[Add users to a .green[repo]]
+
+1. One group member will Open a .green[repo] (like we just went over)
   + Potentially the person who has the project data, but not necessarily
-2. Within the repo on GitHub
-  > *Settings*
-  > *Manage access*
-  > *Invite a collaborator*
+2. Within the .green[repo] on GitHub<br>
+  *> Settings > Manage access > Invite a collaborator*
+
+--
+
 
 ```{r, echo=FALSE, out.width='50%'}
 knitr::include_graphics("images/gh_invite.png")
@@ -598,17 +654,21 @@ knitr::include_graphics("images/gh_invite.png")
 # Collaborating
 
 * The collaborators will receive an email from GitHub
+
 * Accept the invitation
-* **Clone** the repo
+
+* *.green[Clone]* the repo
 
 ---
 # Cloning
 
-* Cloning means that you are downloading the repo
-* You can clone any repo you like (like the `{tidyverse}`)
-* For the final project, you will **clone** the repo you were invited to collaborate on
+* *.green[Cloning]* means that you are downloading the repo
+* You can *.green[clone]* any repo you like (like the `{tidyverse}`)
+* For the final project, you will *.green[clone]* the repo you were invited to collaborate on
 
-```{r, echo=FALSE, out.width='50%'}
+--
+
+```{r, echo=FALSE}
 knitr::include_graphics("images/gh_clone.png")
 ```
 
@@ -630,7 +690,7 @@ knitr::include_graphics("images/gh_clone.png")
 
 (4) Go to GitKraken
 
-(5) Clone > `r fa(name = "globe)` Clone with URL
+(5) Clone > `r fa(name = "globe")` Clone with URL
 
 (6) Specify where it will live on your machine (*"Where to clone to"*)
 
@@ -654,19 +714,20 @@ background-size: contain
 ---
 # Merge Conflicts
 
-* Always **pull** before you start working!!
+* Always **.green[pull]** before you start working!!
+
 * Try to stay in communication with your collaborators and don't work on the exact same thing at the same time
-* Use GitKraken to help manage merge conflicts that do come up
+
+* Use GitKraken to help manage .red[merge conflicts] that do come up
 
 ---
 # Merge Conflicts
 
-* Remember to always **pull** first!!
-* GitKraken has a really nice GUI to resolve merge conflicts
+* Remember to always **.green[pull]** first!!
 
-<video width="320" height="240">
-<source src="https://www.youtube.com/watch?v=R1iWJNyRpQE">
-</video>
+* GitKraken has a really nice GUI to resolve .red[merge conflicts]
+
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=R1iWJNyRpQE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 [link](https://www.youtube.com/watch?v=R1iWJNyRpQE)
 
@@ -681,14 +742,22 @@ Let's give this a shot
 # Merge Conflict Activity (15 mins)
 
 1. Get a partner
-2. Partner1 open in GitHub the repo we made last class
-3. Partner1 add Partner2 as a collaborator in GitHub
-4. Partner2 clone the repo
-5. Partner1 make changes to the file in the repo, commit, and push
-6. Partner2 **do NOT pull**
-7. Partner2 make different changes to the same parts of the file
-  + Partner2 commit the changes. Try to push. What happens? Why?
-8. Use GitKraken to deal with the merge conflict
+
+2. .pink[Partner1] open in GitHub the .green[repo] you made in class
+
+3. .pink[Partner1] add .lightorange[Partner2] as a collaborator in GitHub
+
+4. .lightorange[Partner2] .green[clone] the repo
+
+5. .pink[Partner1] make changes to the *foo.Rmd* file in the .green[repo]
+  + .green[commit] and .green[push] those changes
+
+6. .lightorange[Partner2] **do NOT .green[pull]**
+
+7. .lightorange[Partner2] make different changes to the same parts of the *foo.Rmd* file
+  + .lightorange[Partner2] commit the changes. Try to push. What happens? Why?
+  
+8. Use GitKraken to deal with the .red[merge conflicts]
 
 ```{r, echo=FALSE}
 countdown(minutes = 15, seconds = 0, bottom = 0, warn_when = 120)
@@ -697,56 +766,85 @@ countdown(minutes = 15, seconds = 0, bottom = 0, warn_when = 120)
 ---
 # Merge Conflict Activity (15 mins)
 
-(1) Partner1 open in GitHub the repo we made last class
+(2) .pink[Partner1] open in GitHub the .green[repo] you made in class
 
-(2) Partner1 add Partner2 as a collaborator in GitHub
+(3) .pink[Partner1] add .lightorange[Partner2] as a collaborator in GitHub
 
-(3) Partner2 open email associated with GitHub to accept invitation
+(3) .lightorange[Partner2] open email associated with GitHub to accept invitation
 
-(4) Partner2 clone the repo
+(4) .lightorange[Partner2] .green[clone] the .green[repo]
   + **GitHub**
-  + Copy URL (hit clipboard icon)
+  + Copy URL (click clipboard icon)
   + **GitKraken**
   + Clone with URL
   + Paste in URL
-  + Choose place where repo will live on your machine (local)
+  + Choose place where .green[repo] will live on your machine (.green[local])
+  
+```{r, echo=FALSE}
+countdown(minutes = 15, seconds = 0, bottom = 0, warn_when = 120)
+```
 
 ---
 # Merge Conflict Activity (15 mins)
 
-(5) Partner1 open RRtudio
-  + Make a change to one file in the repo (how about an Rmd file)
-  + commit and push
-(6) Partner2 **do NOT pull**
-(7) Partner2 
-  + Make a different change to the same file in as above
-  + Partner2 commit the changes to local
-  + Try to push. 
+(5) .pink[Partner1] open RRtudio
+  + Make changes to the *foo.Rmd* file in the .green[repo]
+  + .green[commit] and .green[push] those changes
+
+(6) .lightorange[Partner2] **do NOT .green[pull]**
+
+(7) .lightorange[Partner2] 
+  + make different changes to the same parts of the *foo.Rmd* file
+  + .lightorange[Partner2] .green[commit] the changes to local
+  + Try to .green[push] 
   + What happens? Why?
-(8) Use GitKraken to deal with the merge conflict
+  
+(8) Use GitKraken to deal with the .red[merge conflict]
+
+```{r, echo=FALSE}
+countdown(minutes = 15, seconds = 0, bottom = 0, warn_when = 120)
+```
 
 ---
 # Quick Recap
 
 Basic workflow
-* Create a project
-* Create a repo
-* Add collaborators
-* **pull**
-* Commit changes
-* Push changes to remote
+* create an RStudio project
+* create a .green[repo]
+* add collaborators
+* *.green[pull]*
+* *.green[stage]* and *.green[commit]* changes
+* *.green[push]* changes to *.green[remote]*
 
 ---
-Revisiting git terminology
+# Revisiting git terminology
 
 Talk with a neighbor about what each of these terms mean
-* clone
-* pull
-* stage
-* commit
-* push
-* repo
-* remote
+* .green[clone]
+* .green[pull]
+* .green[stage]
+* .green[commit]
+* .green[push]
+* .green[repo]
+* .green[remote]
+
+---
+class: inverse, left, middle
+
+# Next time
+
+---
+# Before next class
+
+* Final Project
+  + .red[Final Project: Draft Data Script]
+* Reading
+  + [R4DS 12](https://r4ds.had.co.nz/tidy-data.html)
+  + [Wickham, H. (2014). Tidy Data.](file:///C:/Users/jnese/AppData/Local/Temp/v59i10.pdf)
+  + [R-Ladies Sydney. CleanItUp 5](https://rladiessydney.org/courses/ryouwithme/02-cleanitup-5/)
+* Homework
+  + **Homework 7** (hopefully completed in class today)
+  + **Homework 8**
 
 ---
 class: inverse, left, middle
@@ -761,30 +859,41 @@ Final paper: R Markdown document
 **Final project must:**
 * Be fully reproducible
   + This implies the data are open
+  
 * Be a collaborative project hosted on GitHub
+
 * Move data from its raw "messy" format to a tidy data format
+
 * Include at least two exploratory plots
+
 * Include at least summary statistics of the data in tables, although fitted models are also encouraged
 
 ---
 # Final Project - Dates
 
 * **Week 8  (11/24)**: Data prep script due
+
 * **Week 9  (12/1)**:  Peer review due
+
 * **Week 10 (12/8)**:  Final project presentations
+
 * **Week 11 (12/15)**: Final Paper due
 
 ---
 ## Final Project - Data Prep Script
 
 * Expected to be a work in progress
+
 * Provided to your peers so they can learn from you as much as you can learn from their feedback
 
 **Peer Review**
 
 * Understand the purpose of the exercise
+
 * Conducted as a professional product
+
 * Should be **very** encouraging 
+
 * Zero tolerance policy for inappropriate comments
 
 ---
@@ -794,11 +903,17 @@ Groups are expected to present for approximately 15 minutes (split evenly among 
 
 Presentation cover the following:
 * Share your journey (everyone, at least for a minute or two)
+
 * Discuss challenges you had along the way
+
 * Celebrate your successes
+
 * Discuss challenges you are still facing
+
 * Discuss substantive findings
+
 * Show off your cool figures!
+
 * Discuss next `R` hurdle you want to address
 
 ---
@@ -820,34 +935,43 @@ read_csv(here("rubrics", "final-presentation_rubric.csv")) %>%
 * R Markdown document
   + Abstract, Intro, Methods, Results, Discussion, References
   + Should be brief: 3,500 words max 
+  
 * No code displayed - should look similar to a manuscript being submitted for publication
+
 * Include at least 1 table
+
 * Include at least 2 plots
+
 * Should be fully open, reproducible, and housed on GitHub
   + I should be able to clone your repository, open the R Studio Project, and reproduce the full manuscript (by knitting the R Markdown doc)
 
 ---
 ## Final Paper - Scoring Rubric
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, fig.height=4}
 
 read_csv(here("rubrics", "final-project_rubric.csv")) %>% 
-  mutate(`Points Possible` = ifelse(is.na(`Points Possible`), "", `Points Possible`)) %>% 
+  mutate(`Points Possible` = ifelse(is.na(`Points Possible`), "", `Points Possible`)) %>%
   gt() %>% 
-  table_style() %>% 
-  fmt_markdown(columns = 1) %>% 
+  fmt_markdown(columns = everything()) %>%
   tab_style(
     style = list(
       cell_text(weight = "bold")
       ),
     locations = cells_body(
-      columns = Criteria,
+      columns = everything(),
       rows = c(1, 8, 12, 20)
     )
+  ) %>%
+    tab_style(
+    style = list(
+      cell_fill(color = "white")),
+    locations = cells_body(
+      columns = c(1, 2))
   ) %>% 
-  tab_header(
-    title = md("**Final Paper Rubric**"))
-  
+  tab_options(column_labels.background.color = "#0072B2",
+              table.font.size = px(10),
+              container.height = pct(80))
 ```
 
 ---
@@ -862,4 +986,11 @@ The following functions:
 * `group_by()`
 * `summarize()`
 
+---
+class: inverse, left, middle
 
+---
+
+```{r, echo=FALSE, eval=FALSE}
+xaringanBuilder::build_pdf(here::here("slides", "w7_git.Rmd"), complex_slides = TRUE)
+```
